terraform/gcp/k8s/participant-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: participant-deployment
  labels:
    app: participant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: participant
  template:
    metadata:
      labels:
        app: participant
    spec:
      serviceAccountName: juniper-app-ksa
      containers:
        - name: cloud-sql-proxy
          # It is recommended to use the latest version of the Cloud SQL Auth Proxy
          # Make sure to update on a regular schedule!
          image: gcr.io/cloud-sql-connectors/cloud-sql-proxy:2.11.4
          args:
            # If connecting from a VPC-native GKE cluster, you can use the
            # following flag to have the proxy connect over private IP
            # - "--private-ip"

            # Enable structured logging with LogEntry format:
            - "--structured-logs"

            # Replace DB_PORT with the port the proxy should listen on
            - "--port=5432"
            - "broad-juniper-dev:us-central1:d2p"

          securityContext:
            # The default Cloud SQL Auth Proxy image runs as the
            # "nonroot" user and group (uid: 65532) by default.
            runAsNonRoot: true
          # You should use resource requests/limits as a best practice to prevent
          # pods from consuming too many resources and affecting the execution of
          # other pods. You should adjust the following values based on what your
          # application needs. For details, see
          # https://kubernetes.io/docs/concepts/configuration/manage-resources-containers/
          resources:
            requests:
              # The proxy's memory use scales linearly with the number of active
              # connections. Fewer open connections will use less memory. Adjust
              # this value based on your application's requirements.
              memory: "2Gi"
              # The proxy's CPU use scales linearly with the amount of IO between
              # the database and the application. Adjust this value based on your
              # application's requirements.
              cpu: "1"

        - name: participant
          imagePullPolicy: Always
          image: us-central1-docker.pkg.dev/broad-juniper-eng-infra/juniper/juniper-participant:secret-test
          livenessProbe:
            failureThreshold: 30
            httpGet:
              path: /version
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 20
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          readinessProbe:
            failureThreshold: 6
            httpGet:
              path: /status
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 20
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          resources:
            requests:
              memory: "2Gi"
              cpu: "500m"
          volumeMounts:
            - mountPath: /etc/app/portalB2CConfig.yaml
              name: portal-b2c-configmap-mount
              readOnly: true
              subPath: portalB2CConfig.yaml
        - image: us.gcr.io/broad-dsp-gcr-public/httpd-terra-proxy:v0.1.18
          imagePullPolicy: IfNotPresent
          name: oidc-proxy
          ports:
            - containerPort: 80
              protocol: TCP
          volumeMounts:
            - mountPath: /etc/httpd/conf.d/site.conf
              name: d2p-site-configmap-mount
              readOnly: true
              subPath: site.conf
            - mountPath: /etc/httpd/conf.d/oauth2.conf
              name: d2p-oauth2-configmap-mount
              readOnly: true
              subPath: oauth2.conf
          readinessProbe:
            failureThreshold: 6
            httpGet:
              path: /version
              port: 80
              scheme: HTTP
            initialDelaySeconds: 20
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          startupProbe:
            failureThreshold: 1110
            httpGet:
              path: /version
              port: 80
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          resources:
            requests:
              memory: "1Gi"
              cpu: "500m"
      volumes:
        - configMap:
            defaultMode: 420
            name: d2p-oauth2-configmap
          name: d2p-oauth2-configmap-mount
        - configMap:
            defaultMode: 420
            name: d2p-site-configmap
          name: d2p-site-configmap-mount
        - configMap:
            defaultMode: 420
            name: portal-b2c-configmap
          name: portal-b2c-configmap-mount
