terraform/gcp/k8s/admin-service.yml
apiVersion: v1
kind: Service
metadata:
  name: admin-service
spec:
  type: ClusterIP
  selector:
    app: admin
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
