terraform/gcp/k8s/participant-service.yml
apiVersion: v1
kind: Service
metadata:
  name: participant-service
spec:
  type: ClusterIP
  selector:
    app: participant
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
