terraform/gcp/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: juniper-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: admin-ip
    networking.gke.io/managed-certificates: admin-cert
    # If the class annotation is not specified it defaults to "gce".
    kubernetes.io/ingress.class: "gce"
spec:

  rules:
    - host: "sandbox.demo.juniper-cmi.dev"
      http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: participant-service
                port:
                  number: 80
    - host: "irb.demo.juniper-cmi.dev"
      http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: participant-service
                port:
                  number: 80
    - host: "demo.juniper-cmi.dev"
      http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: participant-service
                port:
                  number: 80
    - host: "juniper-cmi.dev"
      http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: admin-service
                port:
                  number: 80
  defaultBackend:
    service:
      name: admin-service
      port:
        number: 80
